# metaforecast

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  fmt.sh  pyproject.toml
.github/workflows/: pylint.yml
docs/source/: conf.py  ensembles.rst  index.rst  longhorizon.rst  notebooks.rst  requirements.txt  synth.rst
docs/source/_autosummary/: metaforecast.synth.DBA.rst  metaforecast.synth.Jittering.rst  metaforecast.synth.KernelSynth.rst  metaforecast.synth.MagnitudeWarping.rst  metaforecast.synth.OnlineDataAugmentationCallback.rst  metaforecast.synth.Scaling.rst  metaforecast.synth.SeasonalMBB.rst  metaforecast.synth.TSMixup.rst  metaforecast.synth.TimeWarping.rst
docs/source/notebooks/: 01_ensembles_intro.nblink  02_ensembles_cv.nblink  03-ensembles_ade.nblink  04-ftn_longhorizon_nhits.nblink  05-ftn_cv_nhits.nblink  06-synth-data_augmentation.nblink  07-synth-online.nblink
metaforecast/algorithm_selection/: lag_selection.py
metaforecast/ensembles/: __init__.py  ade.py  base.py  expert_loss.py  mlewa.py  mlpol.py  static.py  windowing.py
metaforecast/longhorizon/: __init__.py  ftn.py
metaforecast/synth/: __init__.py  callbacks.py
metaforecast/synth/generators/: _base.py  base.py  dba.py  diffusion.py  jittering.py  kernelsynth.py  mbb.py  scaling.py  tsmixup.py  warping_mag.py  warping_time.py
metaforecast/utils/: barycenters.py  data.py  normalization.py  windows.py
notebooks/: 01_ensembles_intro.ipynb  02_ensembles_cv.ipynb  03_ade.ipynb  03_ensembles-ade.ipynb  04-ftn_longhorizon_nhits.ipynb  05-ftn_cv_nhits.ipynb  06-synth-data_augmentation.ipynb  07-synth-online.ipynb
tests/synth/: test_diffusion.py
