[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name = "metaforecast"
version = "0.1.3"
authors = [
    {name = "Vitor Cerqueira", email = "cerqueira.vitormanuel@gmail.com" },
]
keywords = [
    "Machine Learning",
    "Data Science",
    "Time Series",
    "Forecasting"
]
description = "Meta-learning and Data-centric Forecasting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "lightgbm==4.5.0",
    "tslearn==0.6.3",
    "neuralforecast==1.7.5",
    "mlforecast==0.13.4"
]

[project.urls]
"Homepage" = "https://github.com/vcerqueira/metaforecast"
"Bug Tracker" = "https://github.com/vcerqueira/metaforecast/issues"

[tool.hatch.build.targets.wheel]
packages = ["metaforecast"]