[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name = "metaforecast"
version = "0.1.7"
authors = [
    { name = "Vitor Cerqueira", email = "cerqueira.vitormanuel@gmail.com" },
]
keywords = [
    "Machine Learning",
    "Data Science",
    "Time Series",
    "Forecasting"
]
description = "Meta-learning and Data-centric Forecasting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "arch==5.6.0",
    "lightgbm==4.5.0",
    "tslearn==0.6.3",
    "datasetsforecast==0.0.8",
    "neuralforecast==1.7.5",
    "statsforecast==1.7.5",
    "mlforecast==0.13.4",
    "pytorch_lightning==2.3.3",
    "pytest==8.3.3",
    "pre-commit==4.0.1",
]

[project.urls]
"Homepage" = "https://github.com/vcerqueira/metaforecast"
"Bug Tracker" = "https://github.com/vcerqueira/metaforecast/issues"

[tool.hatch.build.targets.wheel]
packages = ["metaforecast"]

[tool.pylint.design]
max-attributes = 15
max-args = 15
max-locals = 20

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "R0801",
    "R0917"
]
